register, order, detail product

--- a/fc_django/fcuser/templates/base.html
+++ b/fc_django/fcuser/templates/base.html
@@ -20,8 +20,7 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
-
-    <title>Document</title>
+    {% block header %} {% endblock %}
   </head>
   <body>
     <div class="container">
