--- a/fc_django/product/templates/product.html
+++ b/fc_django/product/templates/product.html
@@ -1,4 +1,26 @@
-{% extends "base.html" %} {% load humanize %} {% block contents%}
+{% extends "base.html" %} {% load humanize %} {% block header %}
+<script>
+  function product_detail(id) {
+    $.ajax({
+      url: "/api/product/" + id,
+      success: function (result) {
+        $("#product-" + id)
+          .popover({
+            html: true,
+            content: result.name + "<br/>" + result.price,
+          })
+          .popover("show");
+      },
+    });
+  }
+  function product_leave(id) {
+    $("#product-" + id).popover("hide");
+  }
+
+  $(document).ready(function () {});
+</script>
+
+{% endblock %} {% block contents%}
 
 <div class="row mt-5">
   <div class="col-12">
@@ -15,7 +37,7 @@
         {% for product in product_list %}
         <tr>
           <th scope="row">{{product.id}}</th>
-          <th><a href="/product/{{product.id}}">{{product.name}}</a></th>
+          <th><a onmouseenter="product_detail({{product.id}});" onmouseleave="product_leave({{product.id}})" id="product-{{ product.id }}" href="/product/{{product.id}}">{{product.name}}</a></th>
           <th>{{product.price|intcomma}}원</th>
           <th>{{product.register_date|date:'Y-m-d H:i'}}</th>
         </tr>
